--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "express": "^4.15.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-router": "^2.8.1"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-sass": "^4.5.3",
+    "react-addons-test-utils": "^0.14.6",
     "sass-loader": "^6.0.6",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
